k8s/certmng/new/ok_namespaces/k8s/ast_pods.yml
apiVersion: v1
kind: Service
metadata:
  name: monitor-ast-svc
  namespace: monitor
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  selector:
    app: monitor-ast-pod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitor-ast-dep
  namespace: monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitor-ast-pod
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 300
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: monitor-ast-pod
      namespace: monitor
    spec:
      containers:
        - name: monitor-ast-pod
          image: reg.nms.com.vn/k8s_ast
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: ast-volume
              mountPath: /config
          ports:
            - containerPort: 80
            - containerPort: 443
      volumes:
        - name: ast-volume
          nfs:
            server: 192.168.88.118
            path: /etc/ks_data/monitor_config/ast/config
      restartPolicy: Always
